--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "TOKEN": "",
-    "ID": "",
-    "HASH": "",
+    "TOKEN": "7037453058:AAE9OkjiKkzEk2_lyHJrdHtW853fXASDHa0",
+    "ID": "28776072",
+    "HASH": "b3a786dce1f4e7d56674b7cadfde3c9d",
     "STRING": null
 }
